test/samples/error/err_undefined_var_refs.w
v = [1, 2, 3, 4]  while (v[2]>1)  {v[2] = v[2] -1}